<resources>
    <string name="app_name">UBC LaunchPad Calculator</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="sign">+/−</string>
    <string name="module">%</string>
    <string name="exponent">^</string>
    <string name="add">+</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="clear">C</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="subtract">–</string>
    <string name="heximal">HEX</string>
    <string name="binary">BI</string>
    <string name="sin">SIN</string>
    <string name="cos">COS</string>
    <string name="tan">TAN</string>
    <string name="square_root">√</string>
    <string name="pi">π</string>
    <string name="oneDivideX">1/x</string>
    <string name="xDivide100">x/100</string>
    <string name="factorial">x!</string>
</resources>
