<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="5"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/clear"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonExponent"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/exponent"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonModule"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/module"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/divide"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/_7"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/_8"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/_9"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/multiply"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/_4"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/_5"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/_6"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonSubtract"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/subtract"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/_1"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/_2"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/_3"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/add"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/dot"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button0"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/_0"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonSigns"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/sign"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonEquals"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:onClick="equals"
            android:text="@string/equals"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

    </GridLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="495dp"
        android:layout_height="100dp"
        android:layout_above="@+id/gridLayout"
        android:layout_alignEnd="@+id/gridLayout"
        android:layout_alignLeft="@+id/gridLayout"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/gridLayout"
        android:layout_alignStart="@+id/gridLayout"
        android:background="@color/colorAccent"
        android:gravity="end"
        android:padding="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        tools:ignore="RtlHardcoded,RtlSymmetry" />
</RelativeLayout>
